--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<HTml>
+<head> <title>Estilos</title>
+</head>
+<body>
+    <!..
+    <h1>
+        America de Cali</h1>
+        <p>El mejor equipo de Colombia</p>
+<img src="imagen.png.jpeg">
+</body>
 
+</HTml>
