--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> <title>Estilos</title>
 </head>
 <body>
-    <!..
+    <!--Aplicar estilos en linea-->
     <h1>
         America de Cali</h1>
         <p>El mejor equipo de Colombia</p>
