--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>
         America de Cali</h1>
         <p>El mejor equipo de Colombia</p>
-<img src="imagen.png.jpeg">
+<img src="america de cali" alt="">
 </body>
 
 </HTml>
