cambio de imagen

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <h1>
         America de Cali</h1>
         <p>El mejor equipo de Colombia</p>
-<img src="america de cali" alt="">
-</body>
+        <img src="america de cali.jpeg">
+
+    </body>
 
 </HTml>
