--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 </head>
 <body>
     <!--Aplicar estilos en linea-->
-    <h1>
+    <h1 style="color: red;font-size: 28px;">
         America de Cali</h1>
-        <p>El mejor equipo de Colombia</p>
+        <p style="color: red;font-family: Arial, Helvetica, sans-serif;">El mejor equipo de Colombia</p>
         <img src="america de cali.jpeg">
 
     </body>
