--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <HTml>
 <head> <title>Estilos</title>
-</head>
+</head><style> h1{color:black;font-size: 30px;}p{color: white;font-family: 'Times New Roman', Times, serif;}
+</style>
 <body>
     <!--Aplicar estilos en linea-->
-    <h1 style="color: red;font-size: 28px;">
-        America de Cali</h1>
-        <p style="color: red;font-family: Arial, Helvetica, sans-serif;">El mejor equipo de Colombia</p>
+    <h1></h1>America de Cali</h1>
+        <p></p>"El mejor equipo de Colombia</p>
         <img src="america de cali.jpeg">
 
     </body>
