--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <HTml>
 <head> <title>Estilos</title>
-</head><style> h1{color:black;font-size: 30px;}p{color: white;font-family: 'Times New Roman', Times, serif;}
+</head><style>h1{color: blue;font-size: 30px;}
+p{color: brown;font-family: 'Times New Roman', Times, serif;}
 </style>
+
+
+
+
 <body>
     <!--Aplicar estilos en linea-->
-    <h1></h1>America de Cali</h1>
-        <p></p>"El mejor equipo de Colombia</p>
-        <img src="america de cali.jpeg">
+    <h1America de Cali</h1>
+        <p>El mejor equipo de Colombia</p>
 
     </body>
 
