--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ p{color: brown;font-family: 'Times New Roman', Times, serif;}
 
 <body>
     <!--Aplicar estilos en linea-->
-    <h1America de Cali</h1>
+<h1>America de Cali</h1>
         <p>El mejor equipo de Colombia</p>
 
     </body>
