--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <HTml>
 <head> <title>Estilos</title>
-</head><style>h1{color: blue;font-size: 30px;}
-p{color: brown;font-family: 'Times New Roman', Times, serif;}
+</head><h1></h1><style>
+p{color: #e6dbdb;font-family: 'Times New Roman', Times, serif;}
 </style>
 
 
