--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <HTml>
 <head> <title>Estilos</title>
 </head><h1></h1><style>
-p{color: #e6dbdb;font-family: 'Times New Roman', Times, serif;}
+p{color: #a81717;font-family: 'Times New Roman', Times, serif;}
 </style>
 
 
