--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <HTml>
 <head> <title>Estilos</title>
-</head><h1></h1><style>
+</head><h1></h1>
+<style>h1{color: orangered;}
 p{color: #a81717;font-family: 'Times New Roman', Times, serif;}
 </style>
 
