--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <HTml>
 <head> <title>Estilos</title>
+    <link rel="stylesheet" href="Estilo.css">
 </head><h1></h1>
-<style>h1{color: orangered;}
-p{color: #a81717;font-family: 'Times New Roman', Times, serif;}
-</style>
-
-
-
 
 <body>
     <!--Aplicar estilos en linea-->
 <h1>America de Cali</h1>
-        <p>El mejor equipo de Colombia</p>
-
-    </body>
+</p>>El mejor equipo de Colombia</p>
+</body>
 
 </HTml>
