--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <HTml>
 <head> <title>Estilos</title>
     <link rel="stylesheet" href="Estilo.css">
-</head><h1></h1>
+</head>sy
 
 <body>
     <!--Aplicar estilos en linea-->
