estilo a nivel de archivo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <HTml>
 <head> <title>Estilos</title>
     <link rel="stylesheet" href="Estilo.css">
-</head>sy
+</head>
 
 <body>
     <!--Aplicar estilos en linea-->
