css a nivel de pagina

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <HTml>
 <head> <title>Estilos</title>
     <link rel="stylesheet" href="Estilo.css">
-</head>
+<style>
+    h1{color: red;font-size: 100px;}
+    
+</style>
+<p{color:black;font-size:80px;}
 
 <body>
     <!--Aplicar estilos en linea-->
