a nivel de pagina

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!--Aplicar estilos en linea-->
 <h1>America de Cali</h1>
-</p>>El mejor equipo de Colombia</p>
+</p>El mejor equipo de Colombia</p>
 </body>
 
 </HTml>
