--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <HTml>
-<head> <title>Estilos</title>
+<head> <title>Archivos css</title>
     <link rel="stylesheet" href="Estilo.css">
-<style>
-    h1{color: red;font-size: 100px;}
-    
-</style>
-<p{color:black;font-size:80px;}
 
 <body>
-    <!--Aplicar estilos en linea-->
 <h1>America de Cali</h1>
 </p>El mejor equipo de Colombia</p>
 </body>
