--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <link rel="stylesheet" href="Estilo.css">
 
 <body>
-<h1>America de Cali</h1>
-</p>El mejor equipo de Colombia</p>
-<img src="america de cali.jpeg" alt="">
+<h1 style="color: red;font-size: x-large;">America de Cali</h1>
+<p style="color: red;font-family: Arial, Helvetica, sans-serif;">El mejor equipo de Colombia</p>
+<img src="america de cali.jpeg" style="border: 10px solid red;">
 </body>
 
 </HTml>
