--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <HTml>
-<head> <title>Archivos css</title>
+<head> <title>ESTILOS</title>
+    <style>
+        h1{color: red;font-size: x-large;"
+
+        }
+        p{
+            color: black;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        img{
+            border: 20px solid black;
+        }
+    
+    </style>
     <link rel="stylesheet" href="Estilo.css">
 
 <body>
-<h1 style="color: red;font-size: x-large;">America de Cali</h1>
-<p style="color: red;font-family: Arial, Helvetica, sans-serif;">El mejor equipo de Colombia</p>
-<img src="america de cali.jpeg" style="border: 10px solid red;">
+<!--aplicar estilos en linea de bloque-->
+<h1 >America de Cali</h1>
+<p>El mejor equipo de Colombia</p>
+<img src="america de cali.jpeg"
+<h1 >America de Cali</h1>
+<p>El mejor equipo de Colombia</p>
+
+h1
 </body>
 
 </HTml>
