--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
         }
         p{
-            color: black;
+            color: red;
             font-family: Arial, Helvetica, sans-serif;
         }
         img{
-            border: 20px solid black;
+            border: 20px solid red;
         }
     
     </style>
@@ -24,7 +24,7 @@
 <h1 >America de Cali</h1>
 <p>El mejor equipo de Colombia</p>
 
-h1
+
 </body>
 
 </HTml>
