--- a/index.html
+++ b/index.html
@@ -2,16 +2,12 @@
 <HTml>
 <head> <title>ESTILOS</title>
     <style>
-        h1{color: red;font-size: x-large;"
-
-        }
+        h1{color: red;font-size: x-large;"}
         p{
             color: red;
-            font-family: Arial, Helvetica, sans-serif;
-        }
+            font-family: Arial, Helvetica, sans-serif;}
         img{
-            border: 20px solid red;
-        }
+            border: 100px; solid red;}
     
     </style>
     <link rel="stylesheet" href="Estilo.css">
