--- a/index.html
+++ b/index.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
 <HTml>
 <head> <title>ESTILOS</title>
-    <style>
-        h1{color: red;font-size: x-large;"}
-        p{
-            color: red;
-            font-family: Arial, Helvetica, sans-serif;}
-        img{
-            border: 100px; solid red;}
     
-    </style>
-    <link rel="stylesheet" href="Estilo.css">
+    <link rel=href="estilo.css">
 
 <body>
 <!--aplicar estilos en linea de bloque-->
 <h1 >America de Cali</h1>
-<p>El mejor equipo de Colombia</p>
+<p>El mejor equipo de Colombia<p>
 <img src="america de cali.jpeg"
 <h1 >America de Cali</h1>
-<p>El mejor equipo de Colombia</p>
+<p>El mejor equipo de Colombia<p>
 
 
 </body>
