--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h1 >America de Cali</h1>
 <p>El mejor equipo de Colombia<p>
 <img src="america de cali.jpeg"
-<h1 >America de Cali</h1>
+</h1> America de Cali</h1>
 <p>El mejor equipo de Colombia<p>
 
 
